fix jumpy tables

--- a/webroot/scss/prime.scss
+++ b/webroot/scss/prime.scss
@@ -313,12 +313,17 @@ div.formats {
 				@include grid-column(12, 0);
 			}
 			div.pieces {
-				@include grid-column(12);
+				@include grid-column(12,0);
 				button {
 					display: none;
 				}
 				table {
 					display: block;
+				}
+			}
+			div.pieces:hover {
+				table {
+					position: relative;
 				}
 			}
 		}
